--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-deploy": "^0.1.5",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.5",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "arb-ethers-web3-bridge": "^0.7.3",
@@ -17,28 +21,25 @@
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^2.4.1",
     "ethereumjs-util": "^6.2.0",
-    "ethers": "^4.0.45",
+    "ethers": "^5.6.2",
+    "hardhat": "^2.9.3",
+    "hardhat-truffle5": "^1.0.1",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "solc": "0.5.16",
-    "truffle-flattener": "^1.4.4",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "ts-node": "^8.5.4"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3",
+    "zksync-web3": "^0.4.0"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
     "lint:fix": "yarn prettier ./test/*.ts --write",
     "clean": "rimraf ./build/",
     "precompile": "yarn clean",
-    "compile": "waffle .waffle.json",
+    "compile": "hardhat compile",
     "pretest": "yarn compile",
-    "test": "mocha",
-
-    "flattener": "./scripts/flattener.sh"
+    "test": "mocha"
   },
-  "license": "AGPL-3.0-or-later",
-  "dependencies": {
-    "typescript": "^3.9.5"
-  }
+  "license": "AGPL-3.0-or-later"
 }
