--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.1.2",
     "@types/chai": "^4.2.14",
@@ -25,10 +25,10 @@
     "babel-polyfill": "^6.26.0",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
-    "ethereum-waffle": "^3.4.0",
     "glob": "^7.1.7",
     "glob-promise": "^4.2.0",
     "hardhat": "^2.9.5",
+    "mathjs": "^10.6.1",
     "mocha": "^6.2.2",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.17",
@@ -41,8 +41,7 @@
     "truffle-hdwallet-provider": "^1.0.17",
     "ts-node": "10.7.0",
     "typechain": "^5.1.2",
-    "typescript": "^4.5.2",
-    "mathjs": "^10.6.1"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.0",
