--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,7 @@ node_modules/
 contracts/.flattened
 .openzeppelin/.session
 .env
-build
-env/*
-coverage/*
-coverage.json
-cache/
-yarn.lock
-coverage/
-coverage.json
-typechain
-deployments/hardhat
-deployments/localhost
+.vscode
+build/
+deployments/
+typechain/
