--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "engines": {
     "node": ">=10"
   },
+  "dependencies": {},
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.2",
@@ -22,44 +23,25 @@
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "arb-ethers-web3-bridge": "^0.7.3",
-    "babel-eslint": "^10.1.0",
-    "babel-polyfill": "^6.26.0",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
-    "glob": "^7.1.7",
-    "glob-promise": "^4.2.0",
+    "ethereumjs-util": "^7.1.3",
+    "ethers": "^5.4.6",
     "hardhat": "^2.9.5",
+    "hardhat-deploy": "^0.9.0",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
     "mathjs": "^10.6.1",
     "mocha": "^6.2.2",
     "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.17",
     "rimraf": "^3.0.0",
     "solc": "0.5.16",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.7.20",
-    "truffle-flattener": "^1.4.4",
-    "truffle-hdwallet-provider": "^1.0.17",
     "ts-node": "10.7.0",
     "typechain": "^5.1.2",
     "typescript": "^4.5.2"
-  },
-  "dependencies": {
-    "@metamask/eth-sig-util": "^4.0.0",
-    "@openzeppelin/contracts": "^4.2.0",
-    "apollo-fetch": "^0.7.0",
-    "aws-sdk": "^2.980.0",
-    "axios": "^0.21.1",
-    "babel-register": "^6.26.0",
-    "dotenv": "^10.0.0",
-    "ethereumjs-util": "^7.1.3",
-    "ethereumjs-wallet": "^1.0.2",
-    "ethers": "^5.4.6",
-    "glob-promise": "^4.2.0",
-    "hardhat-deploy": "^0.9.0",
-    "hardhat-deploy-ethers": "^0.3.0-beta.10",
-    "mustache": "^4.2.0",
-    "solidity-bytes-utils": "^0.8.0"
   },
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
