--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.1.2",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.4",
-    "@types/mustache": "^4.1.2",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "arb-ethers-web3-bridge": "^0.7.3",
@@ -28,19 +29,20 @@
     "eslint": "^7.32.0",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.4.6",
-    "hardhat": "^2.9.5",
+    "hardhat": "^2.10.0",
     "hardhat-deploy": "^0.9.0",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "hardhat-gas-reporter": "^1.0.8",
     "mathjs": "^10.6.1",
-    "mocha": "^6.2.2",
     "prettier": "^2.3.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.17",
     "rimraf": "^3.0.0",
     "solc": "0.5.16",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.7.20",
     "ts-node": "10.7.0",
-    "typechain": "^5.1.2",
+    "typechain": "^8.1.0",
     "typescript": "^4.5.2"
   },
   "scripts": {
