--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "glob": "^7.1.7",
     "glob-promise": "^4.2.0",
     "hardhat": "^2.9.5",
+    "hardhat-gas-reporter": "^1.0.8",
+    "mathjs": "^10.6.1",
     "mocha": "^6.2.2",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.17",
@@ -41,8 +43,7 @@
     "truffle-hdwallet-provider": "^1.0.17",
     "ts-node": "10.7.0",
     "typechain": "^5.1.2",
-    "typescript": "^4.5.2",
-    "mathjs": "^10.6.1"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@metamask/eth-sig-util": "^4.0.0",
