--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.32.0",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.4.6",
+    "glob-promise": "^5.0.0",
     "hardhat": "^2.10.0",
     "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-deploy": "^0.9.0",
@@ -51,11 +52,12 @@
     "clean": "rimraf ./build/",
     "precompile": "yarn clean",
     "compile": "hardhat compile",
-    "test": "hardhat compile && hardhat test",
+    "test": "yarn compile && hardhat test",
     "test:coverage": "hardhat coverage",
     "test:gasreport": "GAS_REPORT_ENABLED=true hardhat test",
     "prepublishOnly": "yarn test",
-    "flattener": "./scripts/flattener.sh"
+    "flattener": "./scripts/flattener.sh",
+    "build-package": "ts-node scripts/bundler.ts"
   },
   "license": "AGPL-3.0-or-later"
 }
